# bpho-projectiles

./: .dockerignore  .gitignore  Dockerfile  Home.py  Introduction.py  LICENSE  README.md  Task_5.py  app.py  config.py  docker-compose.yml  helpers.py  presets.py  pyproject.toml  requirements.txt  run.sh  utils.py
.github/workflows/: deploy-azure.yml  prod_bpho-projectiles.yml  prod_streamlit-instance.yml
.streamlit/: config.toml
pages/: 1-Task_1.py  1-Task_1_-_Projectile_Motion.py  2-Task_2_-_Analytical_Projectile_Motion.py  3-Task_3_-_Projectile_to_hit_X,_Y.py  Home.py  Task_1.py  Task_2.py  Task_3.py  Task_4.py  Task_5.py  Task_6.py  Task_7.py  Task_8.py  Task_9.py
views/: Home.py  Task_1.py  Task_2.py  Task_3.py  Task_4.py  Task_5.py  Task_6.py  Task_7.py  Task_8.py  Task_9.py
