[tool.poetry]
name = "bpho-projectiles"
version = "0.1.0"
description = "Submission to the BPhO Computational Challenge"
authors = ["Kenneth Lew", "Timothy Ka"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
numpy = "^1.26.4"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
