[tool.poetry]
name = "bpho-projectiles"
version = "0.1.0"
description = "Submission to the BPhO Computational Challenge"
authors = ["Kenneth Lew", "Timothy Ka"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
numpy = "^1.26.4"
plotly = "^5.22.0"
st-pages = "^0.4.5"

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "yapf"
column_limit = 110
indent_width = 4
continuation_indent_width = 4
spaces_before_comment = "15, 20"
blank_lines_around_top_level_definition = 2
